tests/tests/errors/2006-11.vb
'#compiler-options:-optionstrict:
'#compiler-message:Command line error BC2006 : option 'optionstrict' requires ':custom'
'#exit-code:1